# haskellbook

./: .gitignore  README.md
01/: notes.md
02/: notes.md  practice.hs  repl.hs  test.hs
03/: Print1.hs  print-2.hs  print-3-flipped.hs  print-3.hs  topOrLocal.hs
04/: notes.md  practice.hs
05/: Arith3Broken.hs  TypeChecking.hs  parametricity.hs  practice.hs  sing.hs  type-arguments.hs  type-inference.hs  type-matching.hs
06/: 06.05-day-of-week.hs  06.05-eq-instances.hs  06.08-will-they-work.hs  06.12-numberish.hs  06.14-does-it-typecheck.hs  06.14-match-the-types.hs  06.14-multiple-choice.hs  06.14-type-kwon-do-two.hs  06.14-what-can-we-do.hs  DayOfWeek.hs  chapter-exercises.hs  day-of-week.hs  eq-instances.hs  notes.md  practice.hs  trivial-typeclass-instance.hs
07/: 07.03-grab-bag.hs  07.04-registered-user.hs  07.04-tuple-functions.hs  07.04-variety-pack.hs  07.04-where-penguins-live.hs  07.05-case-practice.hs  07.05-greet-if-cool-3.hs  07.06-artful-dodgy.hs  07.06-employee-rank.hs  07.07-guard-duty.hs  07.11-lets-write-code.hs  07.11-multiple-choice.hs  RegisteredUser.hs  case-expressions.hs  case-practice.hs  chapter-exercises.hs  greetIfCool3.hs  higher-order-functions.hs
08/: 08.02-exercise.hs  08.06-fixing-divided-by.hs  08.06-mccarthy-91-function.hs  08.06-recursion.hs  08.06-review-of-types.hs  08.06-reviewing-currying.hs  08.06-word-number.hs  factorial.hs  fibonacci-numbers.hs  notes.hs  practice.hs  wordNumber.hs
09/: 09.05-enum-from-to.hs  09.06-thy-fearful-symmetry.hs  09.07-comprehend-thy-lists.hs  09.07-square-cube.hs  09.08-is-it-in-normal-form.hs  09.08-will-it-blow-up.hs  09.09-more-bottoms.hs  09.10-filtering.hs  09.11-zipping-lists.hs  09.12-ciphers.hs  09.12-data-char.hs  09.12-writing-your-own-standard-functions.hs  cipher.hs  dataChar.hs  fearfulSymmetry.hs  filtering.hs  listComprehensions.hs  myWords.hs  notes.hs  practice.hs  standardFunctions.hs  transformingLists.hs  zippingLists.hs
10/: 10.05-understanding-folds.hs  10.06-database-processing.hs  10.08-scans-exercises.hs  10.10-rewriting-functions-using-folds.hs  10.10-warm-up-and-review.hs  chapter-exercises.hs  database-processing.hs  practice.hs
11/: 11.06-vehicles.hs  11.06.hs  11.08-cardinality.hs  11.08-for-example.hs  11.09-logic-goats.hs  11.10-pity-the-bool.hs  11.12-how-does-your-garden-grow.hs  11.13-programmers.hs  11.13-sum-and-product.hs  11.14-the-quad.hs  11.17-binary-tree.hs  11.18-as-patterns.hs  11.18-ciphers.hs  11.18-huttons-razor.hs  11.18-language-exercises.hs  11.18-multiple-choice.hs  11.18-phone-exercise.hs  AsPatterns.hs  BinaryTree.hs  Goats.hs  Phone.hs  Programmers.hs  Vehicle.hs  binary-tree.hs  constructing-deconstructing.hs  data-constructor-arities.hs  deconstruct.hs  deconstructing.hs  dog-types.hs  functionType.hs  logicGoats.hs  normal-form.hs  notes.hs  practice.hs  productTypes.hs  sum-types.hs  sumTypes.hs  vehicles.hs
12/: 12.02-how-i-learned-to-stop-worrying-and-love-nothing.hs  12.03-bleating-either.hs  12.05-binary-tree.hs  12.05-determine-the-kinds.hs  12.05-its-only-natural.hs  12.05-small-library-for-either.hs  12.05-small-library-for-maybe.hs  12.05-string-processing.hs  12.05-unfolds.hs  12.05-validate-the-word.hs  EitherLib.hs  EqCaseGuard.hs  MaybeLib.hs  NaturalNumbers.hs  StringProcessing.hs  ValidateTheWord.hs  eq-case-guard.hs
13/: Palindrome.hs  notes.hs
13/hangman/: .gitignore  LICENSE  README.md  hangman.cabal
13/hangman/src/: Main.hs
13/hello/: hello.cabal
13/hello/exe/: Main.hs
13/hello/src/: DogsRule.hs  Hello.hs  Main.hs
14/: 14.06-arbitrary-instances.hs  14.06-coarbitrary.hs  14.07-failure.hs  14.07-gen-random-generator.hs  14.07-idempotence.hs  14.07-using-quickcheck.hs  Arbitrary.hs  WordNumberTest.hs  co-arbitrary-quick-check.hs
14/14.05-morse-code/: LICENSE  morse.cabal
14/14.05-morse-code/src/: Morse.hs
14/14.05-morse-code/tests/: tests.hs
14/14.07-word-number-test/: README.md  word-number-test.cabal
14/14.07-word-number-test/src/: WordNumber.hs
14/14.07-word-number-test/test/: WordNumberTest.hs
14/simple-arithmetic/: README.md  simple-arithmetic.cabal
14/simple-arithmetic/src/: SimpleArithmetic.hs
14/simple-arithmetic/test/: SimpleArithmeticTest.hs
14/word-number/: word-number.cabal
14/word-number/src/: WordNumber.hs
15/: 15.10-optional-monoid.hs  15.11-madness.hs  15.12-maybe-another-monoid.hs  15.15-monoid-exercises.hs  15.15-semigroup-exercises.hs  Madness.hs  OptionalMonoid.hs  chapter-exercises.hs  notes.hs
16/: 16.04-be-kind.hs  16.07-heavy-lifting.hs  16.07-replace-experiment.hs  16.10-instances-of-func.hs  16.11-possibly.hs  16.11-short-exercise.hs  16.17-chapter-exercises-1.hs  16.17-chapter-exercises-2.hs  16.17-chapter-exercises-3.hs  FunctorInstances.hs  InstancesOfFunc.hs  ReplaceExperiment.hs  heavy-lifting.hs  higher-kinded-types.hs  notes.hs  possibly.hs  replace-experiment.hs  sum.hs
17/: 17.05-constant-instance.hs  17.05-fixer-upper.hs  17.05-identity-instance.hs  17.05-lookups.hs  17.07-bad-monoid.hs  17.08-apl1.hs  17.08-list-applicative-exercise.hs  17.08-validations-on-either.hs  17.08-ziplist-applicative-exercise.hs  17.09-chapter-exercises-1.hs  17.09-chapter-exercises-2.hs  17.09-chapter-exercises-3.hs  applicative-in-use.hs  bad-monoid.hs  chapter-exercises.hs  constant-instance.hs  fixer-upper.hs  identity-instance.hs  list-applicative.hs  lookups.hs  maybe-applicative.hs  notes.hs  validation.hs  ziplist-monoid.hs
18/: 18.02-bind.hs  18.03-do-syntax-and-monads.hs  18.04-either-monad.hs  18.04-maybe-monad.hs  18.05-bad-monad.hs  bad-monad.hs  (+9 more)
21/http-stuff/: README.md  http-stuff.cabal  stack.yaml
21/http-stuff/app/: Main.hs
21/http-stuff/src/: HttpStuff.hs
22/22.11-shawty-prime/: README.md  shawty-prime.cabal
22/22.11-shawty-prime/app/: Main.hs
29/29.09-config-directories/: README.md  ini-parser.cabal  package.yaml  stack.yaml
29/29.09-config-directories/app/: Main.hs
29/29.09-config-directories/src/: Parser.hs  Run.hs
31/31.03-fingerd/: LICENSE  README.md  finger.db  fingerd.cabal
31/31.03-fingerd/src/: Debug.hs  Main.hs
(+144 files in other folders)
