name:                word-number
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/evturn/haskell-programming/tree/master/14/word-number
license:             BSD3
license-file:        LICENSE
author:              Evan Turner
maintainer:          ev@evturn.com
copyright:           Copyright: (c) 2017 Evan Turner
category:            Education
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      test
                     , src
  exposed-modules:     WordNumberTest
                     , WordNumber
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                     , hspec
  default-language:    Haskell2010