name:                http-stuff
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/evturn/haskellbook/tree/master/21/http-stuff#readme
license:             BSD3
license-file:        LICENSE
author:              Evan Turner
maintainer:          ev@evturn.com
copyright:           Copyright: (c) 2017 Evan Turner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HttpStuff 
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , wreq
  default-language:    Haskell2010

executable http-stuff-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , http-stuff
                     , bytestring
                     , wreq
  default-language:    Haskell2010

test-suite http-stuff-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , http-stuff
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/evturn/haskellbook/tree/master/21/http-stuff
