name:                shawty-prime
version:             0.1.0.0
synopsis:            First they took his daughter. Now they're coming for him.
description:         A former CIA agent reluctantly lets his daughter go on a trip
license:             BSD3
license-file:        LICENSE
author:              Evan Turner
maintainer:          ev@evturn.com
copyright:           Copyright: (c) 2017 Evan Turner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable shawty-prime
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/evturn/haskellbook
